--- a/src/style/VHome.css
+++ b/src/style/VHome.css
@@ -279,7 +279,7 @@ li {
     padding: 40px 0;
 }
 
-iframe[Attributes Style] {
+#iframe {
     width: 554px;
     height: 340px;
     border-top-width: 0px;
